--- a/src/main/res/layout/activity_list.xml
+++ b/src/main/res/layout/activity_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ListActivity">
+    tools:context="com.example.shubufei.ListActivity">
 <include layout="@layout/layout_title"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_list"
