--- a/src/main/res/layout/activity_item1.xml
+++ b/src/main/res/layout/activity_item1.xml
@@ -14,30 +14,33 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <TextView
-            android:visibility="gone"
-            android:layout_weight="2"
-            android:id="@+id/tv_key1"
-            android:drawableRight="@mipmap/ic_choose"
-            android:layout_margin="@dimen/layout_margin"
-            android:text="委外工序："
-            style="@style/item_normal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
+
         <TextView
             android:layout_weight="2"
+            android:textColor="@color/blue"
             android:id="@+id/tv_key2"
             android:drawableRight="@mipmap/ic_choose"
             android:layout_margin="@dimen/layout_margin"
             android:text="产线："
             style="@style/item_normal"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
+
     </LinearLayout>
     <TextView
+        android:textColor="@color/blue"
+        android:id="@+id/tv_type"
+        android:drawableRight="@mipmap/ic_choose"
+        android:layout_margin="@dimen/layout_margin"
+        android:text="填报类型："
+        style="@style/item_normal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+    <TextView
 
+        android:textColor="@color/blue"
         android:id="@+id/tv_key3"
         android:drawableRight="@mipmap/ic_choose"
         android:layout_margin="@dimen/layout_margin"
@@ -46,6 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
+
     <LinearLayout
         android:visibility="gone"
         android:id="@+id/ll_item2"
@@ -66,11 +70,20 @@
 
 
     </LinearLayout>
+    <TextView
+        android:id="@+id/tv_count"
+        android:layout_margin="@dimen/layout_margin"
+        android:text="订单数量："
+        style="@style/item_normal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
     <LinearLayout
     android:id="@+id/ll_item3"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
     <TextView
         android:layout_weight="2"
         android:id="@+id/tv_key5"
@@ -92,62 +105,43 @@
         android:layout_height="wrap_content"
         />
 </LinearLayout>
-    <TextView
-        android:id="@+id/tv_count"
-        android:layout_margin="@dimen/layout_margin"
-        android:text="订单数量："
-        style="@style/item_normal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+
     <LinearLayout
-        android:id="@+id/ll_item4"
+
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:layout_weight="2"
-            android:id="@+id/tv_key7"
-
-            android:layout_margin="@dimen/layout_margin"
-            android:text="上线累积量："
-            style="@style/item_normal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            style="@style/textview"
+            android:id="@+id/tv_title1"
+            android:text="日产量："
             />
-        <LinearLayout
-            android:layout_weight="2"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                style="@style/textview"
-                android:id="@+id/tv_title1"
-                android:text="日产量："
-                />
-            <EditText
-                android:layout_gravity="center_vertical"
-                style="@style/edittext"
-                android:id="@+id/et_warehouse"
-                android:layout_toRightOf="@id/tv_title1"
-                />
-        </LinearLayout>
+        <EditText
+            android:inputType="number"
+            android:layout_gravity="center_vertical"
+            style="@style/edittext"
+            android:id="@+id/et_iqty"
+            android:layout_toRightOf="@id/tv_title1"
+            />
     </LinearLayout>
+    <TextView
+
+        android:id="@+id/tv_key10"
+
+        android:layout_margin="@dimen/layout_margin"
+        android:text="累计日产量："
+        style="@style/item_normal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+
+
     <LinearLayout
         android:id="@+id/ll_item5"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <TextView
-            android:layout_weight="2"
-            android:id="@+id/tv_key10"
 
-            android:layout_margin="@dimen/layout_margin"
-            android:text="今日累计产量："
-            style="@style/item_normal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
         <TextView
             android:layout_weight="2"
             android:id="@+id/tv_key9"
@@ -162,15 +156,7 @@
 
 
     </LinearLayout>
-    <TextView
-        android:id="@+id/tv_type"
-        android:drawableRight="@mipmap/ic_choose"
-        android:layout_margin="@dimen/layout_margin"
-        android:text="填报类型："
-        style="@style/item_normal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+
     <TextView
         android:visibility="gone"
         android:id="@+id/tv_key11"
@@ -203,7 +189,7 @@
         android:id="@+id/tv_item13"
 
         android:layout_margin="@dimen/layout_margin"
-        android:text="款号名称："
+        android:text="剩余产量："
         style="@style/item_normal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -221,7 +207,7 @@
         <EditText
             android:layout_gravity="center_vertical"
             style="@style/edittext"
-            android:id="@+id/et_item8"
+            android:id="@+id/et_remarks"
             android:layout_toRightOf="@id/tv_title1"
             />
     </LinearLayout>
