--- a/src/main/res/layout/activity_item1.xml
+++ b/src/main/res/layout/activity_item1.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
 <data></data>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,6 +9,15 @@
     android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context="com.example.shubufei.Item1Activity">
+   <ScrollView
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
     <include layout="@layout/layout_title"/>
     <LinearLayout
         android:id="@+id/ll_item1"
@@ -73,11 +83,62 @@
     <TextView
         android:id="@+id/tv_count"
         android:layout_margin="@dimen/layout_margin"
-        android:text="订单数量："
+        android:text="开单数量："
         style="@style/item_normal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
+    <LinearLayout
+        android:id="@+id/l_item3"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_weight="2"
+            android:id="@+id/tv_icjqty"
+            android:layout_margin="@dimen/layout_margin"
+            android:text="裁剪数量："
+            style="@style/item_normal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+        <TextView
+            android:layout_weight="2"
+            android:id="@+id/tv_iscqty"
+
+            android:layout_margin="@dimen/layout_margin"
+            android:text="生产数量："
+            style="@style/item_normal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/l_item4"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_weight="2"
+            android:id="@+id/tv_isoqty"
+            android:layout_margin="@dimen/layout_margin"
+            android:text="裁剪数量："
+            style="@style/item_normal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+        <TextView
+            android:layout_weight="2"
+            android:id="@+id/tv_cmemo"
+            android:layout_margin="@dimen/layout_margin"
+            android:text="生产数量："
+            style="@style/item_normal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+    </LinearLayout>
     <LinearLayout
     android:id="@+id/ll_item3"
     android:orientation="horizontal"
@@ -242,5 +303,6 @@
         </RelativeLayout>
     </RelativeLayout>
 </LinearLayout>
-
+   </ScrollView>
+</LinearLayout>
 </layout>
